DaemonSet.yaml
{
  "kind": "DaemonSet",
  "spec": {
    "updateStrategy": {
      "rollingUpdate": {
        "maxUnavailable": "10%"
      },
      "type": "RollingUpdate"
    },
    "template": {
      "spec": {
        "priorityClassName": "system-node-critical",
        "securityContext": { },
        "serviceAccountName": "aws-node",
        "hostNetwork": true,
        "terminationGracePeriodSeconds": 10,
        "affinity": {
          "nodeAffinity": {
            "requiredDuringSchedulingIgnoredDuringExecution": {
              "nodeSelectorTerms": [
                {
                  "matchExpressions": [
                    {
                      "operator": "In",
                      "values": [
                        "linux"
                      ],
                      "key": "kubernetes.io/os"
                    },
                    {
                      "operator": "In",
                      "values": [
                        "amd64",
                        "arm64"
                      ],
                      "key": "kubernetes.io/arch"
                    },
                    {
                      "operator": "NotIn",
                      "values": [
                        "fargate"
                      ],
                      "key": "eks.amazonaws.com/compute-type"
                    }
                  ]
                }
              ]
            }
          }
        },
        "volumes": [
          {
            "hostPath": {
              "path": "/opt/cni/bin"
            },
            "name": "cni-bin-dir"
          },
          {
            "hostPath": {
              "path": "/etc/cni/net.d"
            },
            "name": "cni-net-dir"
          },
          {
            "hostPath": {
              "path": "/var/run/dockershim.sock"
            },
            "name": "dockershim"
          },
          {
            "hostPath": {
              "path": "/var/log/aws-routed-eni",
              "type": "DirectoryOrCreate"
            },
            "name": "log-dir"
          },
          {
            "hostPath": {
              "path": "/var/run/aws-node",
              "type": "DirectoryOrCreate"
            },
            "name": "run-dir"
          },
          {
            "hostPath": {
              "path": "/run/xtables.lock"
            },
            "name": "xtables-lock"
          }
        ],
        "tolerations": [
          {
            "operator": "Exists"
          }
        ],
        "initContainers": [
          {
            "securityContext": {
              "privileged": true
            },
            "image": "602401143452.dkr.ecr.us-west-2.amazonaws.com/amazon-k8s-cni-init:v1.11.3",
            "volumeMounts": [
              {
                "mountPath": "/host/opt/cni/bin",
                "name": "cni-bin-dir"
              }
            ],
            "name": "aws-vpc-cni-init",
            "env": [
              {
                "name": "DISABLE_TCP_EARLY_DEMUX",
                "value": "false"
              },
              {
                "name": "ENABLE_IPv6",
                "value": "false"
              }
            ]
          }
        ],
        "containers": [
          {
            "livenessProbe": {
              "initialDelaySeconds": 60,
              "timeoutSeconds": 10,
              "exec": {
                "command": [
                  "/app/grpc-health-probe",
                  "-addr=:50051",
                  "-connect-timeout=5s",
                  "-rpc-timeout=5s"
                ]
              }
            },
            "securityContext": {
              "capabilities": {
                "add": [
                  "NET_ADMIN"
                ]
              }
            },
            "name": "aws-node",
            "image": "602401143452.dkr.ecr.us-west-2.amazonaws.com/amazon-k8s-cni:v1.11.3",
            "volumeMounts": [
              {
                "mountPath": "/host/opt/cni/bin",
                "name": "cni-bin-dir"
              },
              {
                "mountPath": "/host/etc/cni/net.d",
                "name": "cni-net-dir"
              },
              {
                "mountPath": "/host/var/log/aws-routed-eni",
                "name": "log-dir"
              },
              {
                "mountPath": "/var/run/dockershim.sock",
                "name": "dockershim"
              },
              {
                "mountPath": "/var/run/aws-node",
                "name": "run-dir"
              },
              {
                "mountPath": "/run/xtables.lock",
                "name": "xtables-lock"
              }
            ],
            "env": [
              {
                "name": "ADDITIONAL_ENI_TAGS",
                "value": "{}"
              },
              {
                "name": "AWS_VPC_CNI_NODE_PORT_SUPPORT",
                "value": "true"
              },
              {
                "name": "AWS_VPC_ENI_MTU",
                "value": "9001"
              },
              {
                "name": "AWS_VPC_K8S_CNI_CONFIGURE_RPFILTER",
                "value": "false"
              },
              {
                "name": "AWS_VPC_K8S_CNI_CUSTOM_NETWORK_CFG",
                "value": "false"
              },
              {
                "name": "AWS_VPC_K8S_CNI_EXTERNALSNAT",
                "value": "false"
              },
              {
                "name": "AWS_VPC_K8S_CNI_LOGLEVEL",
                "value": "DEBUG"
              },
              {
                "name": "AWS_VPC_K8S_CNI_LOG_FILE",
                "value": "/host/var/log/aws-routed-eni/ipamd.log"
              },
              {
                "name": "AWS_VPC_K8S_CNI_RANDOMIZESNAT",
                "value": "prng"
              },
              {
                "name": "AWS_VPC_K8S_CNI_VETHPREFIX",
                "value": "eni"
              },
              {
                "name": "AWS_VPC_K8S_PLUGIN_LOG_FILE",
                "value": "/var/log/aws-routed-eni/plugin.log"
              },
              {
                "name": "AWS_VPC_K8S_PLUGIN_LOG_LEVEL",
                "value": "DEBUG"
              },
              {
                "name": "DISABLE_INTROSPECTION",
                "value": "false"
              },
              {
                "name": "DISABLE_METRICS",
                "value": "false"
              },
              {
                "name": "DISABLE_NETWORK_RESOURCE_PROVISIONING",
                "value": "false"
              },
              {
                "name": "ENABLE_IPv4",
                "value": "true"
              },
              {
                "name": "ENABLE_IPv6",
                "value": "false"
              },
              {
                "name": "ENABLE_POD_ENI",
                "value": "false"
              },
              {
                "name": "ENABLE_PREFIX_DELEGATION",
                "value": "false"
              },
              {
                "name": "WARM_ENI_TARGET",
                "value": "1"
              },
              {
                "name": "WARM_PREFIX_TARGET",
                "value": "1"
              },
              {
                "valueFrom": {
                  "fieldRef": {
                    "fieldPath": "spec.nodeName"
                  }
                },
                "name": "MY_NODE_NAME"
              }
            ],
            "readinessProbe": {
              "initialDelaySeconds": 1,
              "timeoutSeconds": 10,
              "exec": {
                "command": [
                  "/app/grpc-health-probe",
                  "-addr=:50051",
                  "-connect-timeout=5s",
                  "-rpc-timeout=5s"
                ]
              }
            },
            "ports": [
              {
                "containerPort": 61678,
                "name": "metrics"
              }
            ],
            "resources": {
              "requests": {
                "cpu": "25m"
              }
            }
          }
        ]
      },
      "metadata": {
        "labels": {
          "k8s-app": "aws-node",
          "app.kubernetes.io/instance": "RELEASE-NAME",
          "app.kubernetes.io/name": "aws-node"
        }
      }
    },
    "selector": {
      "matchLabels": {
        "app.kubernetes.io/instance": "RELEASE-NAME",
        "app.kubernetes.io/name": "aws-node"
      }
    }
  },
  "apiVersion": "apps/v1",
  "metadata": {
    "labels": {
      "helm.sh/chart": "aws-vpc-cni-1.1.20",
      "app.kubernetes.io/instance": "RELEASE-NAME",
      "app.kubernetes.io/name": "aws-node",
      "k8s-app": "aws-node",
      "app.kubernetes.io/version": "v1.11.3",
      "app.kubernetes.io/managed-by": "Helm"
    },
    "namespace": "default",
    "name": "aws-node"
  }
}
